--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <junit.version>4.12</junit.version>
     <gson.version>2.8.5</gson.version>
+    <javafx.version>2.2</javafx.version>
+    <slfj.version>1.7.25</slfj.version>
   </properties>
 
   <dependencies>
@@ -34,6 +36,20 @@
       <version>${gson.version}</version>
     </dependency>
 
+    <!-- log -->
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slfj.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${slfj.version}</version>
+      <!-- <scope>test</scope> -->
+    </dependency>
   </dependencies>
 
   <build>
@@ -80,5 +96,16 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <resources>
+      <!--编译src/main/java目录下的xml文件-->
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**/*.fxml</include>
+          <include>**/*.css</include>
+        </includes>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
   </build>
 </project>
