主程序视窗

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,3 +9,4 @@ log4j.appender.stdout.layout.ConversionPattern=[log]%d %p [%c] - %m%n
 #log4j.appender.stdout.Threshold=INFO
 #log4j.appender.stdout.Target=System.out
 #log4j.appender.stdout.Encoding=UTF-8
+#log4j.logger.xin.spring.javafx=DEBUG,stdout
