--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <gson.version>2.8.5</gson.version>
     <javafx.version>2.2</javafx.version>
     <slfj.version>1.7.25</slfj.version>
+    <jdbc.version>5.1.38</jdbc.version>
   </properties>
 
   <dependencies>
@@ -34,6 +35,13 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>${gson.version}</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${jdbc.version}</version>
     </dependency>
 
     <!-- log -->
