--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,10 @@
     <gson.version>2.8.5</gson.version>
     <javafx.version>2.2</javafx.version>
     <slfj.version>1.7.25</slfj.version>
-    <jdbc.version>5.1.38</jdbc.version>
+    <mysql.version>8.0.15</mysql.version>
+    <spring.data.jpa>2.1.5.RELEASE</spring.data.jpa>
+    <hibernate.version>5.3.5.Final</hibernate.version>
+    <c3p0.version>0.9.5.2</c3p0.version>
   </properties>
 
   <dependencies>
@@ -41,7 +44,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>${jdbc.version}</version>
+      <version>${mysql.version}</version>
     </dependency>
 
     <!-- log -->
@@ -58,6 +61,30 @@
       <version>${slfj.version}</version>
       <!-- <scope>test</scope> -->
     </dependency>
+
+    <!-- spring data jap + hibernate方式依赖  -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>${spring.data.jpa}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-c3p0</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.mchange</groupId>
+      <artifactId>c3p0</artifactId>
+      <version>${c3p0.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
