新增数据库类型

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <javafx.version>2.2</javafx.version>
     <slfj.version>1.7.25</slfj.version>
     <mysql.version>8.0.15</mysql.version>
+    <mariadb.version>2.5.0</mariadb.version>
     <spring.data.jpa>2.1.5.RELEASE</spring.data.jpa>
     <hibernate.version>5.3.5.Final</hibernate.version>
     <c3p0.version>0.9.5.2</c3p0.version>
@@ -46,6 +47,13 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql.version}</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+    <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>${mariadb.version}</version>
+    </dependency>
+
 
     <!-- log -->
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
